src/test/ui/resolve/issue-33876.stderr
error[E0425]: unresolved name `Bar`
  --> $DIR/issue-33876.rs:20:22
   |
20 |     let any: &Any = &Bar; //~ ERROR expected value, found trait `Bar`
   |                      ^^^ unresolved name
   |
   = help: trait `Bar` cannot be used as an expression

error: aborting due to previous error

